# commoditybench

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  conftest.py  generation_trendline.html  index.html  methodology_draft.md  pyproject.toml  site_data.json
cc_harness/: CLAUDE.md  PROMPT.txt  README.md  ccl.py  ccl_index.json  questions.jsonl  record.py
dashboard/: index.html
data/: questions.example.jsonl  questions.jsonl  schema.md  verification_worksheet.md
results/: ab2_agentic__claude-opus-4-8.jsonl  ab2_agentic__summary.json  ab2_baseline__claude-opus-4-8.jsonl  ab2_baseline__summary.json  ab_agentic__claude-opus-4-8.jsonl  ab_agentic__summary.json  ab_baseline__claude-opus-4-8.jsonl  ab_baseline__summary.json  agentic_ab_findings.md  comparison__claude-opus-4-8.jsonl  comparison__gpt-4o.jsonl  comparison__qwen3-32b.jsonl  comparison__summary.json  expanded__claude-opus-4-8.jsonl  expanded__gpt-4o.jsonl  expanded__qwen3-32b.jsonl  expanded__summary.json  expanded_agentic__claude-opus-4-8.jsonl  expanded_agentic__summary.json  frontier__gpt-5.5.jsonl  frontier__qwen3-235b.jsonl  frontier__summary.json  frontier_agentic__gpt-5.5.jsonl  frontier_agentic__qwen3-235b.jsonl  frontier_agentic__summary.json  frontier_comparison_findings.md  future_research_directions.md  gen__claude-opus-4-1.jsonl  gen__claude-opus-4-5.jsonl  gen__claude-opus-4-6.jsonl  gen__claude-opus-4-7.jsonl  gen__claude-opus-4-8.jsonl  gen__summary.json  generation_trendline_findings.md  qwen3_32b_runpod__qwen3-32b.jsonl  qwen3_32b_runpod__summary.json
scripts/: aggregate_runs.py  (+10 more)
(+29 files in other folders)
